# as-backend-course

./: README.md
Project/: README.md  pyproject.toml
Project/models/: best-classifier.model
Project/notebooks/classification/: README.md  lab5_classification.ipynb
Project/notebooks/regression/: README.md  lab5_regression.ipynb
Project/project/: main.py  server.py
Project/project/alembic/: env.py
Project/project/alembic/versions/: 5aad35d5d963_feat_default_values_for_created_by_and_.py  5efa0aaf3a49_fix_foreign_key_names.py  7f12a8775fd6_fix_typo_modifed_modified.py  991a1260c1ad_fix_replace_onupdate_value_for_modified_.py  9e0115c3561b_init_revision.py  ab906cd65c01_feat_create_superuser.py  abd53c807df4_fix_remove_default_values_since_they_.py  b0e46ec1adbf_fix_missing_constraint.py  d25fe29f6d45_fix_missing_foreign_key_on_product_for_.py  e0ecf756d458_fix_index.py  f2a5ea7dd3e2_init_revision.py
Project/project/api/: base_router.py  logs_router.py  model_router.py  operations_router.py  products_router.py  tanks_router.py  users_router.py
Project/project/api/utils/: check_for_item.py
Project/project/core/: settings.py
Project/project/dash/: front.py  utils.py
Project/project/db/: db.py
Project/project/entities/: log_entity.py  user_entity.py
Project/project/models/: operation.py  product.py  roles.py  tank.py  user.py
Project/project/repository/: logs_repository.py  users_repository.py
Project/project/service/: files_service.py  jwt_service.py  logs_service.py  model_service.py  operations_service.py  products_service.py  tanks_service.py  users_service.py
task_1/: README.md  (+2 more)
(+22 files in other folders)
