[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Sergey Mikheev <sergeypolosh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
notebook = "^6.5.2"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
scikit-learn = "^1.2.1"
tensorflow = "^2.11.0"
xgboost = "^1.7.4"
catboost = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
