[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Sergey Mikheev <sergeypolosh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "^2.11.0"
fastapi = "^0.92.0"
dash = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
